--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
 						<img src="$">
 						<img src="#">
 					</div>
-					<div class="form">
+					<form action="" method="">
 						<input class="user_input" type="text" placeholder="email">
 						<input class="user_input" type="text" placeholder="message">
 						<button>submit</button>
-					</div>
+					</form>
 				</div>				
 			</div>			
 		</div>
