--- a/about.html
+++ b/about.html
@@ -5,5 +5,6 @@
 	</head>
 	<body>
 		<h3>The story about us</h3>
+		<p>Started when a friend asked me to fix her stew for her due to her long queue of activities</p>
 	<body>
 </html>
