a little motivation for starting

--- a/about.html
+++ b/about.html
@@ -5,5 +5,7 @@
 	</head>
 	<body>
 		<h3>The story about us</h3>
+		<p>Just for the love of cooking and the wanting to visit the market</p>
+	
 	<body>
 </html>
